--- a/FilesCompare/View/MainWindow.xaml
+++ b/FilesCompare/View/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:converter="clr-namespace:FilesCompare.Converter"
+        xmlns:ctrl="clr-namespace:FilesCompare.Style"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         ResizeMode="NoResize"
@@ -109,7 +110,7 @@
             <TextBlock Grid.Column="0" Grid.Row="0" Text="黑名单:" FontFamily="幼圆"/>
             <TextBox Button.Click="TextBox_Click_Ignore" IsReadOnly="True"  Grid.Row="0" TabIndex="0" Grid.Column="1" ToolTip="以'|'号分隔" Text="{Binding Ignore, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}">
             </TextBox>
-            <Popup x:Name="pupIgnore" Placement="Mouse" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
+            <ctrl:PopubEx x:Name="pupIgnore" Placement="Mouse" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
                 <Border BorderBrush="Black" BorderThickness="0.55" Background="White">
                     <StackPanel Background="White" Orientation="Vertical" Margin="5">
                         <TextBlock Background="DimGray" Foreground="White" Text="设置黑名单" HorizontalAlignment="Stretch" TextAlignment="Center"/>
@@ -126,10 +127,10 @@
                         <Button Click="TextBox_Click_Ignore" Content="确定" Margin="0,2" Style="{StaticResource  BaseButtonStyle}"/>
                     </StackPanel>
                 </Border>
-            </Popup>
+            </ctrl:PopubEx>
             <TextBlock Grid.Column="2" Grid.Row="0" Text="白名单:" FontFamily="幼圆"/>
             <TextBox Grid.Row="0" IsReadOnly="True" Button.Click="TextBox_Click_Prefer"  TabIndex="1" Grid.Column="3" ToolTip="以'|'号分隔" Text="{Binding Prefer, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}"/>
-            <Popup x:Name="pupPrefer" Placement="Mouse" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
+            <ctrl:PopubEx x:Name="pupPrefer" Placement="Mouse" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
                 <Border BorderBrush="Black" BorderThickness="0.55" Background="White">
                     <StackPanel Background="White" Orientation="Vertical" Margin="5">
                         <TextBlock Background="DimGray" Foreground="White" Text="设置白名单" HorizontalAlignment="Stretch" TextAlignment="Center"/>
@@ -144,7 +145,7 @@
                         <Button Click="TextBox_Click_Prefer" Content="确定" Margin="0,2" Style="{StaticResource  BaseButtonStyle}"/>
                     </StackPanel>
                 </Border>
-            </Popup>
+            </ctrl:PopubEx>
 
             <TextBlock Text="新文件>" FontFamily="幼圆" Grid.Column="0" Grid.Row="1">
                 <TextBlock.TextEffects>
