--- a/FilesCompare/View/MainWindow.xaml
+++ b/FilesCompare/View/MainWindow.xaml
@@ -108,7 +108,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Column="0" Grid.Row="0" Text="黑名单※" FontFamily="幼圆"/>
-            <TextBox Button.Click="TextBox_Click_Ignore" IsReadOnly="True"  Grid.Row="0" TabIndex="0" Grid.Column="1" ToolTip="以'|'号分隔" Text="{Binding Ignore, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}">
+            <TextBox Button.Click="TextBox_Click_Ignore" IsReadOnly="True"  Grid.Row="0" TabIndex="0" Grid.Column="1" ToolTip="{Binding Text,RelativeSource={RelativeSource Self}}" HorizontalContentAlignment="Center" TextWrapping="NoWrap" Text="{Binding Ignore, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}">
             </TextBox>
             <ctrl:PopubEx x:Name="pupIgnore" Placement="Mouse" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
                 <Border BorderBrush="Black" BorderThickness="0.55" Background="White">
@@ -129,7 +129,7 @@
                 </Border>
             </ctrl:PopubEx>
             <TextBlock Grid.Column="2" Grid.Row="0" Text="白名单√" FontFamily="幼圆"/>
-            <TextBox Grid.Row="0" IsReadOnly="True" Button.Click="TextBox_Click_Prefer"  TabIndex="1" Grid.Column="3" ToolTip="以'|'号分隔" Text="{Binding Prefer, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}"/>
+            <TextBox Grid.Row="0" IsReadOnly="True" Button.Click="TextBox_Click_Prefer"  TabIndex="1" Grid.Column="3" ToolTip="{Binding Text,RelativeSource={RelativeSource Self}}" HorizontalContentAlignment="Center" TextWrapping="NoWrap" Text="{Binding Prefer, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}"/>
             <ctrl:PopubEx x:Name="pupPrefer" Placement="Mouse" PopupAnimation="Scroll" Grid.Row="0" Grid.Column="1" SnapsToDevicePixels="True">
                 <Border BorderBrush="Black" BorderThickness="0.55" Background="White">
                     <StackPanel Background="White" Orientation="Vertical" Margin="5">
@@ -165,8 +165,8 @@
                     </EventTrigger>
                 </TextBlock.Triggers>
             </TextBlock>
-            <TextBox Grid.Column="1" Grid.Row="1"
-                     TabIndex="2"
+            <TextBox Grid.Column="1" Grid.Row="1" HorizontalContentAlignment="Center" TextWrapping="NoWrap"
+                     TabIndex="2" ToolTip="{Binding Text,RelativeSource={RelativeSource Self}}"
                  Style="{StaticResource OpenPathTBXStyle}"
                  Text="{Binding FilePath1, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <TextBlock Text="旧文件>" FontFamily="幼圆" Grid.Column="2" Grid.Row="1">
@@ -187,8 +187,8 @@
                     </EventTrigger>
                 </TextBlock.Triggers>
             </TextBlock>
-            <TextBox Grid.Column="3" Grid.Row="1"
-                     TabIndex="3"
+            <TextBox Grid.Column="3" Grid.Row="1" ToolTip="{Binding Text,RelativeSource={RelativeSource Self}}"
+                     TabIndex="3" HorizontalContentAlignment="Center" TextWrapping="NoWrap"
                  Style="{StaticResource OpenPathTBXStyle}"
                  Text="{Binding FilePath2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
         </Grid>
