--- a/FilesCompare/View/MainWindow.xaml
+++ b/FilesCompare/View/MainWindow.xaml
@@ -232,7 +232,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid x:Name="dgNew" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged" CanUserAddRows="False" SelectionMode="Single" RowBackground="#FFD4D0D0" AlternatingRowBackground="#FFD4D0D0" Grid.Column="0" RowHeight="22" HorizontalAlignment="Stretch" AutoGenerateColumns="False" Margin="1" ItemsSource="{Binding Result1, UpdateSourceTrigger=PropertyChanged}" PreviewMouseDoubleClick="DataGrid_PreviewMouseDoubleClick"
+                    <DataGrid x:Name="dgNew" HeadersVisibility="Column" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged" CanUserAddRows="False" SelectionMode="Single" RowBackground="#FFD4D0D0" AlternatingRowBackground="#FFD4D0D0" Grid.Column="0" RowHeight="22" HorizontalAlignment="Stretch" AutoGenerateColumns="False" Margin="1" ItemsSource="{Binding Result1, UpdateSourceTrigger=PropertyChanged}" PreviewMouseDoubleClick="DataGrid_PreviewMouseDoubleClick"
                        >
                         <DataGrid.ItemsPanel>
                             <ItemsPanelTemplate>
@@ -309,7 +309,7 @@
                             </DataGridTemplateColumn>-->
                         </DataGrid.Columns>
                     </DataGrid>
-                    <DataGrid x:Name="dgOld" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged"  CanUserAddRows="False" RowBackground="#FFD4D0D0" AlternatingRowBackground="#FFD4D0D0" Grid.Column="1" RowHeight="22" HorizontalAlignment="Stretch" AutoGenerateColumns="False" Margin="1" ItemsSource="{Binding Result2, UpdateSourceTrigger=PropertyChanged}" PreviewMouseDoubleClick="DataGrid_PreviewMouseDoubleClick" SelectionMode="Single">
+                    <DataGrid x:Name="dgOld" HeadersVisibility="Column" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged"  CanUserAddRows="False" RowBackground="#FFD4D0D0" AlternatingRowBackground="#FFD4D0D0" Grid.Column="1" RowHeight="22" HorizontalAlignment="Stretch" AutoGenerateColumns="False" Margin="1" ItemsSource="{Binding Result2, UpdateSourceTrigger=PropertyChanged}" PreviewMouseDoubleClick="DataGrid_PreviewMouseDoubleClick" SelectionMode="Single">
                         <DataGrid.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <VirtualizingStackPanel />
